# timetable

./: .env.example  .gitignore  alembic.ini  docker-compose.example.yaml  docker-compose.yaml  dockerfile  main.py  pyproject.toml  taskfile.yaml
src/adapters/litestar/: app.py  schemas.py
src/adapters/telegram/: _providers.py  context.py  dependencies.py  handlers.py  main.py  states.py
src/adapters/telegram/controllers/: group_selection_controller.py
src/adapters/telegram/middlewares/: aioinject_.py  current_user.py
src/core/: dtos.py  errors.py  main.py  types.py
src/core/domain/classroom/: repositories.py  services.py
src/core/domain/educational_level/: repositories.py
src/core/domain/group/: dtos.py  repositories.py
src/core/domain/lesson/: _providers.py  dtos.py  report_renderer.py  repository.py  services.py
src/core/domain/notifications/: _providers.py  renderer.py  sender.py
src/core/domain/subject/: repositories.py  services.py
src/core/domain/teacher/: repositories.py  services.py
src/core/domain/user/: _providers.py  dtos.py  repositories.py
src/core/impls/alchemy/: _providers.py  base.py  deps.py  engine.py
src/core/impls/neo/: _providers.py  dependencies.py
src/core/internal/: _providers.py
src/core/models/: __init__.py  base.py  classroom.py  educational_level.py  group.py  lesson.py  lessons_report.py  subject.py  teacher.py  user.py
src/di/: __init__.py  _container.py
src/lib/: dates.py  filter_.py  logger.py  settings.py
src/lib/jinja/: templates.py
src/lib/jinja/templates/: empty_lessons_report_message.jinja2  lesson_list_item.jinja2  lessons_created_notification.jinja2  lessons_report_message.jinja2  report_title.jinja2
src/lib/settings/: __init__.py  database.py  get_settings.py  litestar.py  telegram.py
src/lib/templates/: schedule_template.jinja2
src/scraping/: _providers.py  main.py
src/scraping/clients/: groups_client.py  lessons_client.py
src/scraping/clients/groups/: groups_client.py  http_client.py
src/scraping/clients/lessons/: http_client.py  lessons_client.py
src/scraping/schemas/: __init__.py  classroom.py  educational_level.py  group.py  lesson.py  subject.py  teacher.py
src/scraping/scrapers/: groups_scraper.py  lessons_scraper.py
src/scraping/tasks/: scrape_lessons.py
tests/: conftest.py
tests/app/: conftest.py
tests/app/educational_level/api/: test_get_all.py
tests/app/educational_level/queries/: test_get_all.py
tests/app/groups/api/: test_get_groups.py
tests/app/groups/queries/: test_get_by_educational_level.py  test_get_groups_query.py
tests/app/lessons/api/: test_get_lessons.py
tests/app/subject/: test_get_or_create.py
tests/app/utils/: lessons.py
tests/factories/: base.py  educational_level_factory.py  group_factory.py  lesson_factory.py  lessons_factory.py  subject_factory.py  user_factory.py
tests/plugins/: commands.py  database.py  factories.py  queries.py  repositories.py  services.py  shared_objects.py
tests/scraping/: conftest.py  test_groups_scraper.py  test_lessons_scraper.py  test_send_lessons_created_command.py
tests/scraping/dummies/: groups_client.py  lessons_client.py
(+75 files in other folders)
